--- a/src/templates/graphing/flotbase.html
+++ b/src/templates/graphing/flotbase.html
@@ -5,8 +5,8 @@
     <title>Flot Examples</title>
     <link href="layout.css" rel="stylesheet" type="text/css">
     <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="../excanvas.min.js"></script><![endif]-->
-    <script language="javascript" type="text/javascript" src="../jquery.js"></script>
-    <script language="javascript" type="text/javascript" src="../jquery.flot.js"></script>
+    <script language="javascript" type="text/javascript" src="jquery.js"></script>
+    <script language="javascript" type="text/javascript" src="jquery.flot.js"></script>
  </head>
     <body>
     <h1>Flot Examples</h1>
