--- a/src/mytornado/templates/index.html
+++ b/src/mytornado/templates/index.html
@@ -1,18 +1,13 @@
-<!-- index.html -->
-
 <html>
-    <head>
-        <title>{{title}}</title>
-    </head>
-</body>
-<ul>
-    {% for message in messages %}
-    <li>{{ escape(message.subject)}} -- {{ escape(message.content) }} </li>
-    {% end %}
-</ul>
-<a href="/form/">Add Form</a>
-</body>
-<html>
-
-
-
+   <head>
+      <title>{{ title }}</title>
+   </head>
+   <body>
+     <ul>
+       {% for message in messages %}
+         <li>{{ escape(message.subject) }} -- {{ escape(message.content) }}</li>
+       {% end %}
+     </ul>
+     <a href='/form/'>Add</a>
+   </body>
+ </html>
