New administration interface operational

--- a/src/CassandraMonitor/mycassandramanager/myinterface/applications/cass1/views/cass_mgr/index.html
+++ b/src/CassandraMonitor/mycassandramanager/myinterface/applications/cass1/views/cass_mgr/index.html
@@ -1,5 +1,9 @@
 {{extend 'layout.html'}}
+
+IMG(_src=URL('static','images/poweredby.png')
+
 <h1>This is the cass_mgr/index.html template</h1>
+
 {{=BEAUTIFY(response._vars)}}
 
 <h2>Cassandra JMX is:</h2><br />
