New interface system; prepping for 0.0.17a

--- a/src/CassandraMonitor/mycassandramanager/myinterface/applications/cass1/views/cass_perf/index.html
+++ b/src/CassandraMonitor/mycassandramanager/myinterface/applications/cass1/views/cass_perf/index.html
@@ -1,10 +1,10 @@
 {{extend 'layout.html'}}
 
-<h1>This is the cass_mgr/index.html template</h1>
+<h1>This is the cass_perf/index.html template</h1>
 
 {{=BEAUTIFY(response._vars)}}
 
-<h2>Cassandra JMX is:</h2><br />
+<h2>Cassandra JMX REAL-TIME is:</h2><br />
 <h3>{{=message}}</h3>
 <h3>Number of visits : {{=counter}}</h2>
 
