--- a/src/CassandraMonitor/mycassandramanager/myinterface/applications/cass1/views/layout.html
+++ b/src/CassandraMonitor/mycassandramanager/myinterface/applications/cass1/views/layout.html
@@ -65,6 +65,9 @@ div.error { background-color: red; color: white; padding: 3px; }
    </div>
    <!-- end content -->
    <div id="sidebar">
+
+       <!-- ** SIDEBAR FOR CASSANDRA MANAGER ** --!>
+
     <ul>
           <li>
      <h2>
@@ -72,36 +75,30 @@ div.error { background-color: red; color: white; padding: 3px; }
       </h2>
       <ul>
        <li>
-        <a href="#">
+        <a href="clusteradministration">
          Cluster Administration
         </a>
         (3)
        </li>
        <li>
-       <a href="#">
-           Node Information
+       <a href="nodeadministration">
+           Node Administration 
         </a>
         (42)
        </li>
        <li>
-       <a href="#">
+       <a href="keyspacemanagement">
            Keyspace Management
         </a>
         (28)
        </li>
        <li>
-       <a href="#">
+       <a href="datamanagement">
            Data Management
         </a>
         (55)
        </li>
-       <li>
-       <a href="#">
-           START CLUSTER
-        </a>
-        (13)
-       </li>
-      </ul>
+         </ul>
      </li>
      <li>
       </ul>
