--- a/src/CassandraMonitor/mycassandramanager/myinterface/applications/cass1/views/cass_perf/flot1.html
+++ b/src/CassandraMonitor/mycassandramanager/myinterface/applications/cass1/views/cass_perf/flot1.html
@@ -1,11 +1,8 @@
-{{extend 'layout.html'}}
+{{extend 'layout_cass_perf.html'}}
 Cassandra real-time performance analysis
 <div id="placeholder" style="width:600px;height:300px;"></div>
 
-    <p>You can update a chart periodically to get a real-time effect
-    by using a timer to insert the new data in the plot and redraw it.</p>
-
-    <p>Time between updates: <input id="updateInterval" type="text" value="" style="text-align: right; width:5em"> milliseconds</p>
+<p>Time between updates: <input id="updateInterval" type="text" value="" style="text-align: right; width:5em"> milliseconds</p>
 
 <script type="text/javascript">
 $(function () {
